# mcp-tunnel

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: code-review.md  oauth-integration-plan.md  plan.md
src/: app.rs  cli.rs  config.rs  constants.rs  error.rs  main.rs
src/mcp/: client.rs  mod.rs  tool_filter.rs  upstream.rs
src/mcp/oauth/: flow.rs  mod.rs  store.rs
src/otel/: init.rs  metrics.rs  mod.rs
src/server/: audit.rs  mod.rs  router.rs
src/tui/: audit_log.rs  layout.rs  mod.rs  servers.rs  tools.rs  tunnel.rs
src/tunnel/: binary.rs  mod.rs  named.rs  quick.rs
