[package]
name = "mcp-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

rmcp = { version = "1.5.0", features = [
    "client",
    "server",
    "auth",
    "transport-child-process",
    "client-side-sse",
    "server-side-http",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "reqwest",
] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1"

ratatui = "0.30"
crossterm = "0.29"

clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

reqwest = { version = "0.13", features = ["json", "stream"] }
axum = "0.8"

oauth2 = "5"

tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }
tracing-opentelemetry = "0.29"
tonic = "0.12"

dirs = "6"
which = "8"
tempfile = "3"
tar = "0.4"
flate2 = "1"
open = "5.3.4"
url = "2.5.8"
arboard = "3.4"
rand = "0.8"
hex = "0.4"
